--- a/Sankey.html
+++ b/Sankey.html
@@ -1,57 +1,54 @@
 <html>
 <head>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script src="https://github.com/niklasvh/html2canvas/releases/download/0.5.0-alpha1/html2canvas.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://github.com/niklasvh/html2canvas/releases/download/v1.4.1/html2canvas.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
 <script>
- //include new google charts library
-      google.charts.load('current', {'packages':['sankey']});
-      google.charts.setOnLoadCallback(drawChart);
+//include new google charts library
+google.charts.load('current', {'packages':['sankey']});
+google.charts.setOnLoadCallback(drawChart);
 
-      function drawChart() {
-        var data = new google.visualization.DataTable();
-        data.addColumn('string', 'From');
-        data.addColumn('string', 'To');
-        data.addColumn('number', 'Weight');
-    data.addRows([
-          [ 'A', 'X', 5 ],
-          [ 'A', 'Y', 7 ],
-          [ 'A', 'Z', 6 ],
-          [ 'B', 'X', 2 ],
-          [ 'B', 'Y', 9 ],
-          [ 'B', 'Z', 4 ]
-        ]);
+function drawChart() {
+	var data = new google.visualization.DataTable();
+	data.addColumn('string', 'From');
+	data.addColumn('string', 'To');
+	data.addColumn('number', 'Weight');
+	data.addRows([
+	[ 'A', 'X', 5 ],
+	[ 'A', 'Y', 7 ],
+	[ 'A', 'Z', 6 ],
+	[ 'B', 'X', 2 ],
+	[ 'B', 'Y', 9 ],
+	[ 'B', 'Z', 4 ]
+	]);
 
-        // Sets chart options.
-        var options = {
-          width: 600,
-        };
+// Sets chart options.
+var options = {
+  width: 600,
+};
 
-        // Instantiates and draws our chart, passing in some options.
-        var chart = new google.visualization.Sankey(document.getElementById('sankey_basic'));
-        chart.draw(data, options);
-      }
+// Instantiates and draws our chart, passing in some options.
+var chart = new google.visualization.Sankey(document.getElementById('sankey_basic'));
+chart.draw(data, options);
+}
 	  
-	  
-	 
-	  //print code
+//print code
 
-   $("#btnPrint").live("click", function () {
-            var divContents = $("#sankey_basic").html();
-            var printWindow = window.open('', '', 'height=400,width=800');
-            printWindow.document.write('<html><head><title>Sankey</title>');
-            printWindow.document.write('</head><body >');
-            printWindow.document.write(divContents);
-            printWindow.document.write('</body></html>');
-            printWindow.document.close();
-            printWindow.print();
-        });
-    //end   
+$("#btnPrint").live("click", function () {
+	var divContents = $("#sankey_basic").html();
+	var printWindow = window.open('', '', 'height=400,width=800');
+	printWindow.document.write('<html><head><title>Sankey</title>');
+	printWindow.document.write('</head><body >');
+	printWindow.document.write(divContents);
+	printWindow.document.write('</body></html>');
+	printWindow.document.close();
+	printWindow.print();
+	});
+//end   
 
 	
-	//image code
+//image code
   
 $(function() {    
 $("#salvapng").click(function() { 
